--- a/_internal/templates/introduction.mdx
+++ b/_internal/templates/introduction.mdx
@@ -18,13 +18,39 @@ import { Tags } from "/snippets/tags.mdx";
 
 ## What is Open Game Backend?
 
-- **First-class scripting, designed like a game engine** Easily extend & modify to grow with your backend on top of the [OpenGB Engine](/engine/introduction) using TypeScript; no backend experience required.
-- **Modular** Mix, match, & modify modules as needed to fit your game's unique requirements.
-- **Secure, load-tested, & resilient** Built to withstand the chaos that games need to grow & stay online. Load testing, rate limits, captchas, strict schemas, <Tooltip tip="...documentation, secrets management, auto-scaling, and backups">and more</Tooltip> are all enforced by default.
-- **Batteries included** Provides thoroughly reviewed, tested, and documented modules to get you started quickly & allow you to customize to fit your needs.
-- **Open-source & permissively licensed** Apache 2.0 license allows you to adapt, modify, & redistribute freely. _[Trust no one, own your backend.](https://delistedgames.com/gamesparks-service-to-end-in-september-potential-threat-to-thousands-of-titles/)_
-
-See our [quickstart guide](/concepts/quickstart) to get up and running today. See how Open Game Backend compares to other game backends [here](/comparison/playfab).
+<CardGroup>
+  <Card icon="cubes" title="Modular">
+    Mix, match, & modify modules as needed to fit your game's unique
+    requirements.
+  </Card>
+  <Card icon="function" title="Script like a game engine">
+    Easily extend & adapt on top of the [OpenGB
+    Engine](/engine/introduction) using TypeScript. Designed to be scripted by game developers.
+  </Card>
+  <Card icon="battery-full" title="Batteries included">
+    Provides thoroughly reviewed, tested, and documented modules to get you
+    started quickly & allow you to customize to fit your needs.
+  </Card>
+  <Card icon="jet-fighter" title="Secure, load-tested, & resilient">
+    Built to withstand the chaos that games need to grow & stay online. Load
+    testing, rate limits, captchas, strict schemas,{" "}
+    <Tooltip tip="...documentation, secrets management, auto-scaling, and backups">
+      {" "}
+      and more
+    </Tooltip>{" "}
+    are all enforced by default.
+  </Card>
+  <Card icon="door-open" title="Open-source & permissively licensed">
+    Apache 2.0 license allows you to adapt, modify, & redistribute freely.
+    _[Trust no one, own your
+    backend.](https://delistedgames.com/gamesparks-service-to-end-in-september-potential-threat-to-thousands-of-titles/)_
+  </Card>
+  <Card
+    icon="arrow-right"
+    title="Get Started"
+    href="/concepts/quickstart"
+  ></Card>
+</CardGroup>
 
 ## Modules
 
