--- a/_internal/templates/introduction.mdx
+++ b/_internal/templates/introduction.mdx
@@ -19,31 +19,20 @@ import { Tags } from "/snippets/tags.mdx";
 ## What is Open Game Backend?
 
 <CardGroup>
-  <Card icon="cubes" title="Modular">
-    Mix, match, & modify modules as needed to fit your game's unique
-    requirements.
+  <Card icon="puzzle" title="Modular">
+    Mix, match, & modify modules as needed to fit your game's unique requirements.
   </Card>
   <Card icon="function" title="Script like a game engine">
-    Easily extend & adapt on top of the [OpenGB
-    Engine](/engine/introduction) using TypeScript. Designed to be scripted by game developers.
+    Easily extend & adapt on top of the [OpenGB Engine](/engine/introduction) using TypeScript. Designed to be scripted by game developers.
   </Card>
   <Card icon="battery-full" title="Batteries included">
-    Provides thoroughly reviewed, tested, and documented modules to get you
-    started quickly & allow you to customize to fit your needs.
+    Provides thoroughly reviewed, tested, and documented modules to get you started quickly & allow you to customize to fit your needs.
   </Card>
-  <Card icon="jet-fighter" title="Secure, load-tested, & resilient">
-    Built to withstand the chaos that games need to grow & stay online. Load
-    testing, rate limits, captchas, strict schemas,{" "}
-    <Tooltip tip="...documentation, secrets management, auto-scaling, and backups">
-      {" "}
-      and more
-    </Tooltip>{" "}
-    are all enforced by default.
+  <Card icon="house-turret" title="Secure, load-tested, & resilient">
+    Built to withstand the chaos that games need to grow & stay online. Load testing, rate limits, captchas, strict schemas, <Tooltip tip="...documentation, secrets management, auto-scaling, and backups">and more</Tooltip> are all enforced by default.
   </Card>
   <Card icon="door-open" title="Open-source & permissively licensed">
-    Apache 2.0 license allows you to adapt, modify, & redistribute freely.
-    _[Trust no one, own your
-    backend.](https://delistedgames.com/gamesparks-service-to-end-in-september-potential-threat-to-thousands-of-titles/)_
+    Apache 2.0 license allows you to adapt, modify, & redistribute freely. _[Trust no one, own your backend.](https://delistedgames.com/gamesparks-service-to-end-in-september-potential-threat-to-thousands-of-titles/)_
   </Card>
   <Card
     icon="arrow-right"
