--- a/_internal/templates/script.mdx
+++ b/_internal/templates/script.mdx
@@ -10,8 +10,8 @@ sidebarTitle: "%%DISPLAY_NAME%%"
 
 <RequestExample>
 
-```typescript OpenGB
-await ctx.modules.%%MODULE_NAME_CAMEL%%.%%NAME_CAMEL%%({
+```typescript OpenGB Script
+const data = await ctx.modules.%%MODULE_NAME_CAMEL%%.%%NAME_CAMEL%%({
   // Request body
 });
 ```
