--- a/modules/auth/scripts/auth_email_passwordless.mdx
+++ b/modules/auth/scripts/auth_email_passwordless.mdx
@@ -10,8 +10,8 @@ sidebarTitle: "Authenticate Email Passwordless"
 
 <RequestExample>
 
-```typescript OpenGB
-await ctx.modules.auth.auth_email_passwordless({
+```typescript OpenGB Script
+const data = await ctx.modules.auth.auth_email_passwordless({
   // Request body
 });
 ```
