--- a/modules/currency/scripts/deposit.mdx
+++ b/modules/currency/scripts/deposit.mdx
@@ -10,8 +10,8 @@ sidebarTitle: "Deposit"
 
 <RequestExample>
 
-```typescript OpenGB
-await ctx.modules.currency.deposit({
+```typescript OpenGB Script
+const data = await ctx.modules.currency.deposit({
   // Request body
 });
 ```
