--- a/modules/currency/scripts/get_balance.mdx
+++ b/modules/currency/scripts/get_balance.mdx
@@ -10,8 +10,8 @@ sidebarTitle: "Get Balance"
 
 <RequestExample>
 
-```typescript OpenGB
-await ctx.modules.currency.get_balance({
+```typescript OpenGB Script
+const data = await ctx.modules.currency.get_balance({
   // Request body
 });
 ```
