--- a/modules/currency/scripts/get_balance_by_token.mdx
+++ b/modules/currency/scripts/get_balance_by_token.mdx
@@ -10,8 +10,8 @@ sidebarTitle: "Get Balance by Token"
 
 <RequestExample>
 
-```typescript OpenGB
-await ctx.modules.currency.get_balance_by_token({
+```typescript OpenGB Script
+const data = await ctx.modules.currency.get_balance_by_token({
   // Request body
 });
 ```
