--- a/modules/currency/scripts/set_balance.mdx
+++ b/modules/currency/scripts/set_balance.mdx
@@ -10,8 +10,8 @@ sidebarTitle: "Set Balance"
 
 <RequestExample>
 
-```typescript OpenGB
-await ctx.modules.currency.set_balance({
+```typescript OpenGB Script
+const data = await ctx.modules.currency.set_balance({
   // Request body
 });
 ```
