--- a/modules/currency/scripts/withdraw.mdx
+++ b/modules/currency/scripts/withdraw.mdx
@@ -10,8 +10,8 @@ sidebarTitle: "Withdraw"
 
 <RequestExample>
 
-```typescript OpenGB
-await ctx.modules.currency.withdraw({
+```typescript OpenGB Script
+const data = await ctx.modules.currency.withdraw({
   // Request body
 });
 ```
