--- a/modules/email/scripts/send_email.mdx
+++ b/modules/email/scripts/send_email.mdx
@@ -10,8 +10,8 @@ sidebarTitle: "Send Email"
 
 <RequestExample>
 
-```typescript OpenGB
-await ctx.modules.email.send_email({
+```typescript OpenGB Script
+const data = await ctx.modules.email.send_email({
   // Request body
 });
 ```
