--- a/modules/friends/scripts/decline_request.mdx
+++ b/modules/friends/scripts/decline_request.mdx
@@ -10,8 +10,8 @@ sidebarTitle: "Decline Request"
 
 <RequestExample>
 
-```typescript OpenGB
-await ctx.modules.friends.decline_request({
+```typescript OpenGB Script
+const data = await ctx.modules.friends.decline_request({
   // Request body
 });
 ```
