--- a/modules/friends/scripts/list_friends.mdx
+++ b/modules/friends/scripts/list_friends.mdx
@@ -10,8 +10,8 @@ sidebarTitle: "List Friends"
 
 <RequestExample>
 
-```typescript OpenGB
-await ctx.modules.friends.list_friends({
+```typescript OpenGB Script
+const data = await ctx.modules.friends.list_friends({
   // Request body
 });
 ```
