--- a/modules/friends/scripts/remove_friend.mdx
+++ b/modules/friends/scripts/remove_friend.mdx
@@ -10,8 +10,8 @@ sidebarTitle: "Remove Friend"
 
 <RequestExample>
 
-```typescript OpenGB
-await ctx.modules.friends.remove_friend({
+```typescript OpenGB Script
+const data = await ctx.modules.friends.remove_friend({
   // Request body
 });
 ```
