--- a/modules/friends/scripts/send_request.mdx
+++ b/modules/friends/scripts/send_request.mdx
@@ -10,8 +10,8 @@ sidebarTitle: "Send Request"
 
 <RequestExample>
 
-```typescript OpenGB
-await ctx.modules.friends.send_request({
+```typescript OpenGB Script
+const data = await ctx.modules.friends.send_request({
   // Request body
 });
 ```
