--- a/modules/rate_limit/scripts/throttle_public.mdx
+++ b/modules/rate_limit/scripts/throttle_public.mdx
@@ -10,8 +10,8 @@ sidebarTitle: "Throttle Public"
 
 <RequestExample>
 
-```typescript OpenGB
-await ctx.modules.rate_limit.throttle_public({
+```typescript OpenGB Script
+const data = await ctx.modules.rate_limit.throttle_public({
   // Request body
 });
 ```
