--- a/modules/tokens/scripts/create.mdx
+++ b/modules/tokens/scripts/create.mdx
@@ -10,8 +10,8 @@ sidebarTitle: "Create Token"
 
 <RequestExample>
 
-```typescript OpenGB
-await ctx.modules.tokens.create({
+```typescript OpenGB Script
+const data = await ctx.modules.tokens.create({
   // Request body
 });
 ```
