--- a/modules/tokens/scripts/get.mdx
+++ b/modules/tokens/scripts/get.mdx
@@ -10,8 +10,8 @@ sidebarTitle: "Get Token"
 
 <RequestExample>
 
-```typescript OpenGB
-await ctx.modules.tokens.get({
+```typescript OpenGB Script
+const data = await ctx.modules.tokens.get({
   // Request body
 });
 ```
