--- a/modules/tokens/scripts/get_by_token.mdx
+++ b/modules/tokens/scripts/get_by_token.mdx
@@ -10,8 +10,8 @@ sidebarTitle: "Get Token by Token"
 
 <RequestExample>
 
-```typescript OpenGB
-await ctx.modules.tokens.get_by_token({
+```typescript OpenGB Script
+const data = await ctx.modules.tokens.get_by_token({
   // Request body
 });
 ```
