--- a/modules/tokens/scripts/revoke.mdx
+++ b/modules/tokens/scripts/revoke.mdx
@@ -10,8 +10,8 @@ sidebarTitle: "Revoke Token"
 
 <RequestExample>
 
-```typescript OpenGB
-await ctx.modules.tokens.revoke({
+```typescript OpenGB Script
+const data = await ctx.modules.tokens.revoke({
   // Request body
 });
 ```
