--- a/modules/tokens/scripts/validate.mdx
+++ b/modules/tokens/scripts/validate.mdx
@@ -10,8 +10,8 @@ sidebarTitle: "Validate Token"
 
 <RequestExample>
 
-```typescript OpenGB
-await ctx.modules.tokens.validate({
+```typescript OpenGB Script
+const data = await ctx.modules.tokens.validate({
   // Request body
 });
 ```
