--- a/modules/users/scripts/create_user.mdx
+++ b/modules/users/scripts/create_user.mdx
@@ -10,8 +10,8 @@ sidebarTitle: "Create User"
 
 <RequestExample>
 
-```typescript OpenGB
-await ctx.modules.users.create_user({
+```typescript OpenGB Script
+const data = await ctx.modules.users.create_user({
   // Request body
 });
 ```
