--- a/modules/users/scripts/create_user_token.mdx
+++ b/modules/users/scripts/create_user_token.mdx
@@ -10,8 +10,8 @@ sidebarTitle: "Create User Token"
 
 <RequestExample>
 
-```typescript OpenGB
-await ctx.modules.users.create_user_token({
+```typescript OpenGB Script
+const data = await ctx.modules.users.create_user_token({
   // Request body
 });
 ```
