--- a/modules/friends/scripts/list_outgoing_friend_requests.mdx
+++ b/modules/friends/scripts/list_outgoing_friend_requests.mdx
@@ -10,8 +10,8 @@ sidebarTitle: "List Outgoing Friend Requests"
 
 <RequestExample>
 
-```typescript OpenGB
-await ctx.modules.friends.list_outgoing_friend_requests({
+```typescript OpenGB Script
+const data = await ctx.modules.friends.list_outgoing_friend_requests({
   // Request body
 });
 ```
