--- a/modules/rate_limit/scripts/throttle.mdx
+++ b/modules/rate_limit/scripts/throttle.mdx
@@ -10,8 +10,8 @@ sidebarTitle: "Throttle"
 
 <RequestExample>
 
-```typescript OpenGB
-await ctx.modules.rate_limit.throttle({
+```typescript OpenGB Script
+const data = await ctx.modules.rate_limit.throttle({
   // Request body
 });
 ```
