--- a/modules/users/scripts/validate_user_token.mdx
+++ b/modules/users/scripts/validate_user_token.mdx
@@ -10,8 +10,8 @@ sidebarTitle: "Validate User Token"
 
 <RequestExample>
 
-```typescript OpenGB
-await ctx.modules.users.validate_user_token({
+```typescript OpenGB Script
+const data = await ctx.modules.users.validate_user_token({
   // Request body
 });
 ```
