--- a/modules/currency/scripts/deposit.mdx
+++ b/modules/currency/scripts/deposit.mdx
@@ -34,7 +34,7 @@ const data = await response.json();
 ```
 
 ```gdscript Godot
-// IMPORTANT: Auto-generated SDK coming soon
+# IMPORTANT: Auto-generated SDK coming soon
 
 var url = "https://localhost:8080/modules/currency/scripts/deposit/call"
 var headers = ["Content-Type: application/json"]
@@ -50,7 +50,7 @@ var json = JSON.new()
 json.parse(body.get_string_from_utf8())
 var data = json.get_data()
 
-// Success
+# Success
 ```
 
 ```csharp Unity
