--- a/_internal/templates/introduction.mdx
+++ b/_internal/templates/introduction.mdx
@@ -43,9 +43,9 @@ import { Tags } from "/snippets/tags.mdx";
 
 ## Modules
 
-These modules are thoroughly reviewed, tested, and documented to help you get your game backend up and running as quickly as possible. Learn more about [creating your own module](/build/introduction) and [using your own registries](/concepts/registries).
+These modules are thoroughly reviewed, tested, and documented to help you get your game backend up and running as quickly as possible. Learn more about [creating your own module](/build) and [using your own registries](/concepts/registries).
 
 <CardGroup cols={2}>
-  <Card title="Build your own" icon="plus" href="/build/introduction" />
+  <Card title="Build your own" icon="plus" href="/build" />
   %%MODULE_CARDS%%
 </CardGroup>
