--- a/modules/users/scripts/authenticate_user.mdx
+++ b/modules/users/scripts/authenticate_user.mdx
@@ -6,12 +6,12 @@ sidebarTitle: "Validate User Token"
 
 | Source                                                                                                      | Name       | Public     |
 | ----------------------------------------------------------------------------------------------------------- | ---------- | ---------- |
-| [Source](https://github.com/rivet-gg/opengb-registry/tree/main/modules/users/scripts/validate_user_token.ts) | `validate_user_token` | Yes |
+| [Source](https://github.com/rivet-gg/opengb-registry/tree/main/modules/users/scripts/authenticate_user.ts) | `authenticate_user` | Yes |
 
 <RequestExample>
 
 ```typescript OpenGB Script
-const data = await ctx.modules.users.validate_user_token({
+const data = await ctx.modules.users.authenticate_user({
   // Request body
 });
 ```
@@ -20,7 +20,7 @@ const data = await ctx.modules.users.validate_user_token({
 // IMPORTANT: Docs on using auto-generated SDK coming soon
 
 const response = await fetch(
-  "https://localhost:8080/modules/users/scripts/validate_user_token/call",
+  "https://localhost:8080/modules/users/scripts/authenticate_user/call",
   {
     method: "POST",
     headers: { "Content-Type": "application/json" },
@@ -36,7 +36,7 @@ const data = await response.json();
 ```gdscript Godot
 # IMPORTANT: Auto-generated SDK coming soon
 
-var url = "https://localhost:8080/modules/users/scripts/validate_user_token/call"
+var url = "https://localhost:8080/modules/users/scripts/authenticate_user/call"
 var headers = ["Content-Type: application/json"]
 var json = JSON.stringify(data_to_send)
 var request = $HTTPRequest.request(url, headers, HTTPClient.METHOD_POST, json)
@@ -58,7 +58,7 @@ var data = json.get_data()
 
 IEnumerator PostData() {
     var json = "{\"key\":\"value\"}"; // Your JSON payload
-    var www = new UnityWebRequest("https://localhost:8080/modules/users/scripts/validate_user_token/call", "POST");
+    var www = new UnityWebRequest("https://localhost:8080/modules/users/scripts/authenticate_user/call", "POST");
     byte[] bodyRaw = System.Text.Encoding.UTF8.GetBytes(json);
     www.uploadHandler = new UploadHandlerRaw(bodyRaw);
     www.downloadHandler = new DownloadHandlerBuffer();
@@ -89,7 +89,7 @@ void UYourClassName::PostRequest()
 {
     TSharedRef<IHttpRequest, ESPMode::ThreadSafe> Request = FHttpModule::Get().CreateRequest();
     Request->OnProcessRequestComplete().BindUObject(this, &UYourClassName::OnResponseReceived);
-    Request->SetURL(TEXT("https://localhost:8080/modules/users/scripts/validate_user_token/call"));
+    Request->SetURL(TEXT("https://localhost:8080/modules/users/scripts/authenticate_user/call"));
     Request->SetVerb(TEXT("POST"));
     Request->SetHeader(TEXT("Content-Type"), TEXT("application/json"));
     FString Payload = TEXT("{\"key\":\"value\"}");
@@ -115,7 +115,7 @@ void UYourClassName::OnResponseReceived(FHttpRequestPtr Request, FHttpResponsePt
 // IMPORTANT: Auto-generated SDK coming soon
 
 let data = reqwest::Client::new()
-    .post("https://localhost:8080/modules/users/scripts/validate_user_token/call")
+    .post("https://localhost:8080/modules/users/scripts/authenticate_user/call")
     .json(&body) // Make sure `body` is defined
     .send()
     .await?
@@ -125,7 +125,7 @@ let data = reqwest::Client::new()
 ```
 
 ```bash curl
-curl -X POST "https://localhost:8080/modules/users/scripts/validate_user_token/call" \
+curl -X POST "https://localhost:8080/modules/users/scripts/authenticate_user/call" \
   -H "Content-Type: application/json" \
   -d '{
     "key": "value" // Your JSON payload here
