--- a/concepts/install.mdx
+++ b/concepts/install.mdx
@@ -2,4 +2,17 @@
 title: Install
 ---
 
-TODO
+import InstallPrerequisites from '/snippets/install-prerequisites.mdx'
+import Install from '/snippets/install.mdx'
+
+## Prerequisites
+
+<InstallPrerequisites />
+
+## Install
+
+<Install />
+
+## Next Steps
+
+See the [quickstart guide](/concepts/quickstart).
