--- a/modules/email/overview.mdx
+++ b/modules/email/overview.mdx
@@ -5,9 +5,6 @@ sidebarTitle: Overview
 ---
 
 TODO:
-
-- Config
-- Errors
 - Script description
 - Database schema
 
@@ -26,34 +23,52 @@ _No dependencies_
 
 ## Installation
 
-<Steps>
-<Step title="Update config">
+<Tabs>
+
+<Tab title="CLI">
+
+```sh CLI
+opengb module add email
+```
+
+</Tab>
+
+<Tab title="backend.yaml">
+
 Add the following to your `backend.yaml`:
 
-```yaml
+```yaml backend.yaml
 modules:
   email:
     config:
       # Your config here. See below for more details.
 
 ```
+</Tab>
 
-</Step>
-<Step title="Call scripts">
-<CodeGroup>
+</Tabs>
 
-```bash curl
-curl --request POST \
-    --url https://dog-api.kinduff.com/api/facts
+## Config
+
+		
+```typescript
+export type Provider =
+  | {
+      test: ProviderTest;
+    }
+  | {
+      sendGrid: ProviderSendGrid;
+    };
+
+export interface Config {
+  provider: Provider;
+}
+export interface ProviderTest {}
+export interface ProviderSendGrid {
+  apiKeyVariable?: string;
+}
 ```
 
-```typescript TypeScript
-let response = await fetch("https://dog-api.kinduff.com/api/facts", {});
-```
-
-</CodeGroup>
-</Step>
-</Steps>
 
 ## Scripts
 
