--- a/_internal/templates/module_overview.mdx
+++ b/_internal/templates/module_overview.mdx
@@ -5,10 +5,6 @@ sidebarTitle: Overview
 ---
 
 TODO:
-
-- Install command
-- Config
-- Errors
 - Script description
 - Database schema
 
@@ -26,30 +22,28 @@ TODO:
 
 ## Installation
 
-<Steps>
-<Step title="Update config">
+<Tabs>
+
+<Tab title="CLI">
+
+```sh CLI
+opengb module add %%NAME%%
+```
+
+</Tab>
+
+<Tab title="backend.yaml">
+
 Add the following to your `backend.yaml`:
 
-```yaml
-%%INSTALL%%
+```yaml backend.yaml
+%%INSTALL_CONFIG%%
 ```
+</Tab>
 
-</Step>
-<Step title="Call scripts">
-<CodeGroup>
+</Tabs>
 
-```bash curl
-curl --request POST \
-    --url https://dog-api.kinduff.com/api/facts
-```
-
-```typescript TypeScript
-let response = await fetch("https://dog-api.kinduff.com/api/facts", {});
-```
-
-</CodeGroup>
-</Step>
-</Steps>
+%%CONFIG_SCHEMA%%
 
 ## Scripts
 
