--- a/modules/users/overview.mdx
+++ b/modules/users/overview.mdx
@@ -5,9 +5,6 @@ sidebarTitle: Overview
 ---
 
 TODO:
-
-- Config
-- Errors
 - Script description
 - Database schema
 
@@ -27,32 +24,30 @@ TODO:
 
 ## Installation
 
-<Steps>
-<Step title="Update config">
+<Tabs>
+
+<Tab title="CLI">
+
+```sh CLI
+opengb module add users
+```
+
+</Tab>
+
+<Tab title="backend.yaml">
+
 Add the following to your `backend.yaml`:
 
-```yaml
+```yaml backend.yaml
 modules:
   users: {}
 
 ```
+</Tab>
 
-</Step>
-<Step title="Call scripts">
-<CodeGroup>
+</Tabs>
 
-```bash curl
-curl --request POST \
-    --url https://dog-api.kinduff.com/api/facts
-```
 
-```typescript TypeScript
-let response = await fetch("https://dog-api.kinduff.com/api/facts", {});
-```
-
-</CodeGroup>
-</Step>
-</Steps>
 
 ## Scripts
 
