--- a/modules/friends/scripts/decline_request.mdx
+++ b/modules/friends/scripts/decline_request.mdx
@@ -9,18 +9,16 @@ sidebarTitle: "Decline Request"
 | [Source](https://github.com/rivet-gg/opengb-registry/tree/main/modules/friends/scripts/decline_request.ts) | `decline_request` | Yes |
 
 <RequestExample>
-
 ```typescript OpenGB Script
-const data = await ctx.modules.friends.decline_request({
+const data = await ctx.modules.%%MODULE_NAME_CAMEL%%.%%NAME_CAMEL%%({
   // Request body
 });
 ```
-
 ```javascript JavaScript
 // IMPORTANT: Docs on using auto-generated SDK coming soon
 
 const response = await fetch(
-  "https://localhost:8080/modules/friends/scripts/decline_request/call",
+  "https://localhost:8080/modules/%%MODULE_NAME%%/scripts/%%NAME%%/call",
   {
     method: "POST",
     headers: { "Content-Type": "application/json" },
@@ -36,7 +34,7 @@ const data = await response.json();
 ```gdscript Godot
 # IMPORTANT: Auto-generated SDK coming soon
 
-var url = "https://localhost:8080/modules/friends/scripts/decline_request/call"
+var url = "https://localhost:8080/modules/%%MODULE_NAME%%/scripts/%%NAME%%/call"
 var headers = ["Content-Type: application/json"]
 var json = JSON.stringify(data_to_send)
 var request = $HTTPRequest.request(url, headers, HTTPClient.METHOD_POST, json)
@@ -58,7 +56,7 @@ var data = json.get_data()
 
 IEnumerator PostData() {
     var json = "{\"key\":\"value\"}"; // Your JSON payload
-    var www = new UnityWebRequest("https://localhost:8080/modules/friends/scripts/decline_request/call", "POST");
+    var www = new UnityWebRequest("https://localhost:8080/modules/%%MODULE_NAME%%/scripts/%%NAME%%/call", "POST");
     byte[] bodyRaw = System.Text.Encoding.UTF8.GetBytes(json);
     www.uploadHandler = new UploadHandlerRaw(bodyRaw);
     www.downloadHandler = new DownloadHandlerBuffer();
@@ -89,7 +87,7 @@ void UYourClassName::PostRequest()
 {
     TSharedRef<IHttpRequest, ESPMode::ThreadSafe> Request = FHttpModule::Get().CreateRequest();
     Request->OnProcessRequestComplete().BindUObject(this, &UYourClassName::OnResponseReceived);
-    Request->SetURL(TEXT("https://localhost:8080/modules/friends/scripts/decline_request/call"));
+    Request->SetURL(TEXT("https://localhost:8080/modules/%%MODULE_NAME%%/scripts/%%NAME%%/call"));
     Request->SetVerb(TEXT("POST"));
     Request->SetHeader(TEXT("Content-Type"), TEXT("application/json"));
     FString Payload = TEXT("{\"key\":\"value\"}");
@@ -115,7 +113,7 @@ void UYourClassName::OnResponseReceived(FHttpRequestPtr Request, FHttpResponsePt
 // IMPORTANT: Auto-generated SDK coming soon
 
 let data = reqwest::Client::new()
-    .post("https://localhost:8080/modules/friends/scripts/decline_request/call")
+    .post("https://localhost:8080/modules/%%MODULE_NAME%%/scripts/%%NAME%%/call")
     .json(&body) // Make sure `body` is defined
     .send()
     .await?
@@ -125,7 +123,7 @@ let data = reqwest::Client::new()
 ```
 
 ```bash curl
-curl -X POST "https://localhost:8080/modules/friends/scripts/decline_request/call" \
+curl -X POST "https://localhost:8080/modules/%%MODULE_NAME%%/scripts/%%NAME%%/call" \
   -H "Content-Type: application/json" \
   -d '{
     "key": "value" // Your JSON payload here
