--- a/modules/tokens/scripts/create.mdx
+++ b/modules/tokens/scripts/create.mdx
@@ -10,7 +10,7 @@ sidebarTitle: "Create Token"
 
 <RequestExample>
 ```typescript OpenGB Script
-const data = await ctx.modules.%%MODULE_NAME_CAMEL%%.%%NAME_CAMEL%%({
+const data = await ctx.modules.tokens.create({
   // Request body
 });
 ```
