--- a/modules/users/scripts/create_user.mdx
+++ b/modules/users/scripts/create_user.mdx
@@ -10,7 +10,7 @@ sidebarTitle: "Create User"
 
 <RequestExample>
 ```typescript OpenGB Script
-const data = await ctx.modules.%%MODULE_NAME_CAMEL%%.%%NAME_CAMEL%%({
+const data = await ctx.modules.users.createUser({
   // Request body
 });
 ```
