--- a/_internal/templates/example_public.mdx
+++ b/_internal/templates/example_public.mdx
@@ -1,18 +1,9 @@
 ```javascript JavaScript
-// IMPORTANT: Docs on using auto-generated SDK coming soon
-
-const response = await fetch(
-  "https://localhost:8080/modules/%%MODULE_NAME%%/scripts/%%NAME%%/call",
-  {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({
-      // Request body
-    }),
-  }
-);
-if (!response.ok) throw new Error(`Error: ${response.status}`);
-const data = await response.json();
+import { BackendApi } from "opengb-sdk";
+const backend = new BackendApi({});
+const data = await backend.call%%MODULE_NAME_PASCAL%%%%NAME_PASCAL%%({
+  // Request body
+});
 ```
 
 ```gdscript Godot
