--- a/modules/auth/scripts/verify_email_passwordless.mdx
+++ b/modules/auth/scripts/verify_email_passwordless.mdx
@@ -10,31 +10,22 @@ sidebarTitle: "Verify Email Passwordless"
 
 <RequestExample>
 ```typescript OpenGB Script
-const data = await ctx.modules.%%MODULE_NAME_CAMEL%%.%%NAME_CAMEL%%({
+const data = await ctx.modules.auth.verifyEmailPasswordless({
   // Request body
 });
 ```
 ```javascript JavaScript
-// IMPORTANT: Docs on using auto-generated SDK coming soon
-
-const response = await fetch(
-  "https://localhost:8080/modules/%%MODULE_NAME%%/scripts/%%NAME%%/call",
-  {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({
-      // Request body
-    }),
-  }
-);
-if (!response.ok) throw new Error(`Error: ${response.status}`);
-const data = await response.json();
+import { BackendApi } from "opengb-sdk";
+const backend = new BackendApi({});
+const data = await backend.callAuthVerifyEmailPasswordless({
+  // Request body
+});
 ```
 
 ```gdscript Godot
 # IMPORTANT: Auto-generated SDK coming soon
 
-var url = "https://localhost:8080/modules/%%MODULE_NAME%%/scripts/%%NAME%%/call"
+var url = "https://localhost:8080/modules/auth/scripts/verify_email_passwordless/call"
 var headers = ["Content-Type: application/json"]
 var json = JSON.stringify(data_to_send)
 var request = $HTTPRequest.request(url, headers, HTTPClient.METHOD_POST, json)
@@ -56,7 +47,7 @@ var data = json.get_data()
 
 IEnumerator PostData() {
     var json = "{\"key\":\"value\"}"; // Your JSON payload
-    var www = new UnityWebRequest("https://localhost:8080/modules/%%MODULE_NAME%%/scripts/%%NAME%%/call", "POST");
+    var www = new UnityWebRequest("https://localhost:8080/modules/auth/scripts/verify_email_passwordless/call", "POST");
     byte[] bodyRaw = System.Text.Encoding.UTF8.GetBytes(json);
     www.uploadHandler = new UploadHandlerRaw(bodyRaw);
     www.downloadHandler = new DownloadHandlerBuffer();
@@ -87,7 +78,7 @@ void UYourClassName::PostRequest()
 {
     TSharedRef<IHttpRequest, ESPMode::ThreadSafe> Request = FHttpModule::Get().CreateRequest();
     Request->OnProcessRequestComplete().BindUObject(this, &UYourClassName::OnResponseReceived);
-    Request->SetURL(TEXT("https://localhost:8080/modules/%%MODULE_NAME%%/scripts/%%NAME%%/call"));
+    Request->SetURL(TEXT("https://localhost:8080/modules/auth/scripts/verify_email_passwordless/call"));
     Request->SetVerb(TEXT("POST"));
     Request->SetHeader(TEXT("Content-Type"), TEXT("application/json"));
     FString Payload = TEXT("{\"key\":\"value\"}");
@@ -113,7 +104,7 @@ void UYourClassName::OnResponseReceived(FHttpRequestPtr Request, FHttpResponsePt
 // IMPORTANT: Auto-generated SDK coming soon
 
 let data = reqwest::Client::new()
-    .post("https://localhost:8080/modules/%%MODULE_NAME%%/scripts/%%NAME%%/call")
+    .post("https://localhost:8080/modules/auth/scripts/verify_email_passwordless/call")
     .json(&body) // Make sure `body` is defined
     .send()
     .await?
@@ -123,7 +114,7 @@ let data = reqwest::Client::new()
 ```
 
 ```bash curl
-curl -X POST "https://localhost:8080/modules/%%MODULE_NAME%%/scripts/%%NAME%%/call" \
+curl -X POST "https://localhost:8080/modules/auth/scripts/verify_email_passwordless/call" \
   -H "Content-Type: application/json" \
   -d '{
     "key": "value" // Your JSON payload here
