--- a/modules/currency/scripts/get_balance.mdx
+++ b/modules/currency/scripts/get_balance.mdx
@@ -10,7 +10,7 @@ sidebarTitle: "Get Balance"
 
 <RequestExample>
 ```typescript OpenGB Script
-const data = await ctx.modules.%%MODULE_NAME_CAMEL%%.%%NAME_CAMEL%%({
+const data = await ctx.modules.currency.getBalance({
   // Request body
 });
 ```
