--- a/modules/currency/scripts/withdraw.mdx
+++ b/modules/currency/scripts/withdraw.mdx
@@ -10,7 +10,7 @@ sidebarTitle: "Withdraw"
 
 <RequestExample>
 ```typescript OpenGB Script
-const data = await ctx.modules.%%MODULE_NAME_CAMEL%%.%%NAME_CAMEL%%({
+const data = await ctx.modules.currency.withdraw({
   // Request body
 });
 ```
