--- a/modules/email/scripts/send_email.mdx
+++ b/modules/email/scripts/send_email.mdx
@@ -10,7 +10,7 @@ sidebarTitle: "Send Email"
 
 <RequestExample>
 ```typescript OpenGB Script
-const data = await ctx.modules.%%MODULE_NAME_CAMEL%%.%%NAME_CAMEL%%({
+const data = await ctx.modules.email.sendEmail({
   // Request body
 });
 ```
