--- a/modules/rate_limit/scripts/throttle.mdx
+++ b/modules/rate_limit/scripts/throttle.mdx
@@ -10,7 +10,7 @@ sidebarTitle: "Throttle"
 
 <RequestExample>
 ```typescript OpenGB Script
-const data = await ctx.modules.%%MODULE_NAME_CAMEL%%.%%NAME_CAMEL%%({
+const data = await ctx.modules.rateLimit.throttle({
   // Request body
 });
 ```
