--- a/modules/rate_limit/scripts/throttle_public.mdx
+++ b/modules/rate_limit/scripts/throttle_public.mdx
@@ -10,7 +10,7 @@ sidebarTitle: "Throttle Public"
 
 <RequestExample>
 ```typescript OpenGB Script
-const data = await ctx.modules.%%MODULE_NAME_CAMEL%%.%%NAME_CAMEL%%({
+const data = await ctx.modules.rateLimit.throttlePublic({
   // Request body
 });
 ```
