--- a/modules/tokens/scripts/get.mdx
+++ b/modules/tokens/scripts/get.mdx
@@ -10,7 +10,7 @@ sidebarTitle: "Get Token"
 
 <RequestExample>
 ```typescript OpenGB Script
-const data = await ctx.modules.%%MODULE_NAME_CAMEL%%.%%NAME_CAMEL%%({
+const data = await ctx.modules.tokens.get({
   // Request body
 });
 ```
