--- a/modules/tokens/scripts/get_by_token.mdx
+++ b/modules/tokens/scripts/get_by_token.mdx
@@ -10,7 +10,7 @@ sidebarTitle: "Get Token by Token"
 
 <RequestExample>
 ```typescript OpenGB Script
-const data = await ctx.modules.%%MODULE_NAME_CAMEL%%.%%NAME_CAMEL%%({
+const data = await ctx.modules.tokens.getByToken({
   // Request body
 });
 ```
