--- a/modules/tokens/scripts/revoke.mdx
+++ b/modules/tokens/scripts/revoke.mdx
@@ -10,7 +10,7 @@ sidebarTitle: "Revoke Token"
 
 <RequestExample>
 ```typescript OpenGB Script
-const data = await ctx.modules.%%MODULE_NAME_CAMEL%%.%%NAME_CAMEL%%({
+const data = await ctx.modules.tokens.revoke({
   // Request body
 });
 ```
