--- a/comparison/pragma.mdx
+++ b/comparison/pragma.mdx
@@ -1,3 +1,14 @@
 ---
-title: Pragma
+title: AccelByte
 ---
+
+<Note>
+  Please read Open Game Backend's [known limitations](/docs/known-limitations)
+  before reading this comparison.
+</Note>
+
+[Pragma](https://pragma.gg/) was founded in 2020 & [AccelByte](https://accelbyte.io/) was founded in 2016. Both platforms have similar limitations, so we'll compare them in the same document.
+
+## What Pragma does well
+
+
