--- a/concepts/known-issues.mdx
+++ b/concepts/known-issues.mdx
@@ -1,3 +1,20 @@
 ---
 title: Known Issues
 ---
+
+<Warning>
+    This is not a comprehensive set of issues. Please see [GitHub issues](https://github.com/rivet-gg/opengb/issues) for a full list.
+</Warning>
+
+## `Record<K, V>` does not produce correct JSON schema
+
+[typescript-json-schema#547](https://github.com/YousefED/typescript-json-schema/issues/547)
+
+Will be fixed with [#15](https://github.com/rivet-gg/opengb-engine/issues/15).
+
+## Moving modules folder breaks imports
+
+```
+error: Module not found "file:///path/to/src/runtime/mod.ts".
+  at file:///path/to/tests/basic/_gen/entrypoint.ts:3:25
+```
