--- a/comparison/nakama.mdx
+++ b/comparison/nakama.mdx
@@ -17,11 +17,11 @@ title: Nakama
 - Focus on real-time multiplayer games
 - Provides scripting in TypeScript, Go, and Lua
 
-## How Nakama compares to Open Game Backend
+## How Supabase and Open Game Backend are similar
 
-### Both open-source
+- Open-source (Apache 2.0)
 
-Both Open Game Backend and Nakama are open-source under the same license (Apache 2.0).
+## How Nakama and Open Game Backend differ
 
 ### Prefab backend vs modular backend
 
