--- a/comparison/playfab.mdx
+++ b/comparison/playfab.mdx
@@ -17,7 +17,7 @@ title: Microsoft PlayFab
 - Tightly integrated with console platforms
 - Tightly integrated with Azure
 
-## How PlayFab compares to Open Game Backend
+## How PlayFab and Open Game Backend differ
 
 ### Closed source
 
