--- a/comparison/supabase.mdx
+++ b/comparison/supabase.mdx
@@ -12,12 +12,18 @@ title: Supabase
 ## What Supabase does well
 
 - Open-source (Apache 2.0)
-- Based on PostgreSQL
+- Tightly integrated with PostgreSQL
 - Realtime
 - Easy to use
 - Quick to get started
 
-## How Supabase compares to Open Game Backend
+## How Supabase and Open Game Backend are similar
+
+- Open-source (Apache 2.0)
+- Built on top of PostgreSQL
+- Built on Deno
+
+## How Supabase and Open Game Backend differ
 
 ## Framework vs engine
 
@@ -46,4 +52,3 @@ Supabase Edge Functions are intended to be used for simple serverless functions,
 Supabase provides core functionality that cannot be modified without forking & self-hosting, such as: authentication, storage, and realtime.
 
 Open Game Backend provides modular functionality that can be easily customized and extended to fit the needs of a game without modifying the core engine.
-
