--- a/comparison/pragma.mdx
+++ b/comparison/pragma.mdx
@@ -7,8 +7,20 @@ title: AccelByte
   before reading this comparison.
 </Note>
 
-[Pragma](https://pragma.gg/) was founded in 2020 & [AccelByte](https://accelbyte.io/) was founded in 2016. Both platforms have similar limitations, so we'll compare them in the same document.
+[Pragma](https://pragma.gg/) was founded in 202. Both platforms have similar limitations, so we'll compare them in the same document.
 
 ## What Pragma does well
 
+- Source-discord engine
 
+## How Pragma and Open Game Backend compare
+
+### Prefab backend vs modular backend
+
+Nakama provides a predefined set of features out of the box. While you can fork Nakama to extend it with your own features, it's not very common.
+
+Nakama encourages developers to [use scripting](https://heroiclabs.com/docs/nakama/server-framework/introduction/index.html) to extend the server. While the scripting is extensive, it's not intended for all use cases.
+
+This means Nakama has first-class services written in Go and asks you to write second-class code written in a scripting language without access to a mature database.
+
+Open Game Backend is designed from the ground up to be modular at its core. It provides a set of official modules to get you started quickly, but the primary use case is to extend the server with your own modules. All modules are first-class citizens have access to a mature database.
