--- a/comparison/pragma.mdx
+++ b/comparison/pragma.mdx
@@ -11,13 +11,15 @@ title: AccelByte
 
 ## What Pragma does well
 
-- Source-discord engine
+- Source-disclosed engine
 
 ## How Pragma and Open Game Backend compare
 
+### Source-discord vs open-source
+
 ### Prefab backend vs modular backend
 
-Nakama provides a predefined set of features out of the box. While you can fork Nakama to extend it with your own features, it's not very common.
+Pragma provides a predefined set of features out of the box. While you can modify Pragma to extend it with your own features, you must have a license to the engine 
 
 Nakama encourages developers to [use scripting](https://heroiclabs.com/docs/nakama/server-framework/introduction/index.html) to extend the server. While the scripting is extensive, it's not intended for all use cases.
 
