--- a/comparison/nakama.mdx
+++ b/comparison/nakama.mdx
@@ -3,7 +3,7 @@ title: Nakama
 ---
 
 <Note>
-  Please read Open Game Backend's [known limitations](/docs/known-limitations)
+  Please read Open Game Backend's [known limitations](/concepts/known-limitations)
   before reading this comparison.
 </Note>
 
@@ -54,7 +54,7 @@ TypeScript was chosen intentionally for Open Game Backend to make it dead simple
 
 ### Managed cloud & self-hosting
 
-Nakama provides a managed cloud [starting at $600/mo](https://heroiclabs.com/pricing/). You should not run a server without high availability, which starts at $1,000/mo.
+Nakama provides a managed cloud [starting at $600 per month](https://heroiclabs.com/pricing/). You should not run a server without high availability, which starts at $1,000 per month.
 
 Both Nakama and Open Game Backend can be self-hosted on any cloud provider.
 
