--- a/comparison/playfab.mdx
+++ b/comparison/playfab.mdx
@@ -3,7 +3,7 @@ title: Microsoft PlayFab
 ---
 
 <Note>
-  Please read Open Game Backend's [known limitations](/docs/known-limitations)
+  Please read Open Game Backend's [known limitations](/concepts/known-limitations)
   before reading this comparison.
 </Note>
 
