--- a/concepts/sdk.mdx
+++ b/concepts/sdk.mdx
@@ -1,5 +1,5 @@
 ---
-title: SDK
+title: SDK Generation
 ---
 
 Open Game Backend generates a unique SDK for your backend with type-safe methods to call your scripts.
