--- a/integrations/infisical.mdx
+++ b/integrations/infisical.mdx
@@ -1,5 +1,6 @@
 ---
 title: Infisical
+description: Store secrets using Infisical
 ---
 
 Infisical is an easy to use tool for managing secrets. This is helpful for when dealing with API keys in development.
