--- a/integrations/overview.mdx
+++ b/integrations/overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: Overview
+title: All Integrations
 ---
 
 export const iconClasses = "w-7 h-7";
@@ -17,6 +17,6 @@ export const infisical = (<svg width="128" height="128" viewBox="0 0 128 128" fi
 );
 
 <CardGroup>
-    <Card title="SendGrid" href="/integrations/sendgrid" icon={sendgrid} />
-    <Card title="Infisical" href="/integrations/infisical" icon={infisical} />
+    <Card title="SendGrid" href="/integrations/sendgrid" icon={sendgrid}>Send emails using SendGrid</Card>
+    <Card title="Infisical" href="/integrations/infisical" icon={infisical}>Store secrets in Infisical</Card>
 </CardGroup>
